test of het werkt

--- a/html/play_cards.html
+++ b/html/play_cards.html
@@ -28,6 +28,7 @@
 
         <!-- draw new card box -->
         <div id="play_card_box" class="drag_input"></div>
+        <!-- honden doen dingen -->
         
     </div>
 
