use card basics + bug fixes

--- a/html/play_cards.html
+++ b/html/play_cards.html
@@ -14,6 +14,7 @@
 
     <script src="../js/cards/play_card.js" defer></script>
     <script src="../js/cards/grab_card.js" defer></script>
+    <script src="../js/cards/use_card.js" defer></script>
 
     <script src="../js/game state/order.js" defer></script>
 
@@ -38,7 +39,7 @@
 
 
     <!-- use cards box -->
-    <div id="cardsContainer" class="played_card_container">
+    <div id="use_cardsContainer" class="played_card_container">
         <div id="use_card_box" class="drag_input"></div>
     </div>
     
