settings start + background color change + sending vars between html

--- a/html/settings.html
+++ b/html/settings.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/start_style.css">
 
-    <title>start</title>
+    <title>settings</title>
 
 
     <!-- all js stuff -->
@@ -27,13 +27,14 @@
         </div>
 
         <!-- settings -->
-        <div id="settings_button" class="start_page_text_button" onclick="go_to_link('settings')">
-            Settings
+        <div id="color_change_button" class="start_page_setting_button">
+            background color:
+            <input type="color" id="background_color_setting" value="#357D35">
         </div>
 
         <!-- rules -->
-        <div id="rules_button" class="start_page_text_button" onclick="go_to_link('rules')">
-            Rules
+        <div id="back_button" class="start_page_text_button" onclick="go_to_link('start')">
+            back
         </div>
     </div>
 
