--- a/html/play_cards.html
+++ b/html/play_cards.html
@@ -15,6 +15,7 @@
     <script src="../js/cards/play_card.js" defer></script>
     <script src="../js/cards/grab_card.js" defer></script>
     <script src="../js/cards/use_card.js" defer></script>
+    <script src="../js/cards/card_hover.js" defer></script>
 
     <script src="../js/game state/total_value.js" defer></script>
 
