--- a/html/play_cards.html
+++ b/html/play_cards.html
@@ -48,6 +48,31 @@
     <div id="use_cardsContainer" class="played_card_container">
         <div id="use_card_box" class="drag_input"></div>
     </div>
+
+    <!-- animation container for used cards -->
+    <div id="cards_used_anim_container" class="cards_used_anim_container"></div>
+
+    <div id="game_info_container" class="game_info_container">
+        <div id="score_to_beat_container" class="game_info_text_container">
+            <div id="rounds_text" class="game_info_text">
+                <p id="score_to_beat_static_text" class="game_info_p">round:</p>
+                <p id="score_to_beat_amount" class="game_info_p">1</p>
+            </div>
+            <div id="score_to_beat_text" class="game_info_text">
+                <p id="score_to_beat_static_text" class="game_info_p">score at least:</p>
+                <p id="score_to_beat_amount" class="game_info_p">21</p>
+            </div>
+        </div>
+
+        <div id="total_score_container" class="game_info_text_container">
+            <p id="total_score_p" class="game_info_p">round score:</p>
+            <div id="total_score_text" class="game_info_text">0</div>
+        </div>
+        <div id="total_hands_container" class="game_info_text_container">
+            <div id="total_hands_text" class="game_info_text">hands: 1</div>
+        </div>
+
+    </div>
     
     <!-- overlay for fade out effect -->
     <div id="overlay" class="overlay"></div>
