--- a/html/settings.html
+++ b/html/settings.html
@@ -21,13 +21,18 @@
 <body>
     <!-- all text buttons -->
     <div class="start_page_text_button_container">
-        <!-- settings -->
+        <!-- animation speed -->
+        <div id="animation_speed_button" class="start_page_text_button" onclick="animation_speed_change()">
+            animation speed: 1×
+        </div>
+
+        <!-- color -->
         <div id="color_change_button" class="start_page_setting_button">
             background color:
             <input type="color" id="background_color_setting" value="#357D35">
         </div>
 
-        <!-- rules -->
+        <!-- back -->
         <div id="back_button" class="start_page_text_button" onclick="go_to_link('start')">
             back
         </div>
