reusing + changing total value / max value

--- a/html/play_cards.html
+++ b/html/play_cards.html
@@ -37,7 +37,7 @@
 
         <!-- total value amount -->
         <div id="total_value_container" class="total_value_container">
-            <div id="total_value_text" class="total_value_text">Total value: 0</div>
+            <div id="total_value_text" class="total_value_text">Total value: 0 / 21</div>
         </div>
 
         <!-- playing cards -->
