--- a/html/play_cards.html
+++ b/html/play_cards.html
@@ -13,6 +13,7 @@
     <!-- all js stuff -->
     <script src="../js/game state/total_value.js" defer></script>
     <script src="../js/game state/calculate_score.js" defer></script>
+    <script src="../js/game state/upgrades.js" defer></script>
 
     <script src="../js/cards/play_card.js" defer></script>
     <script src="../js/cards/grab_card.js" defer></script>
@@ -52,6 +53,8 @@
         </div>
         <!-- animation container for used cards -->
         <div id="cards_used_anim_container" class="cards_used_anim_container"></div>
+
+        <!-- game info container -->
         <div id="game_info_container" class="game_info_container">
             <div id="score_to_beat_container" class="game_info_text_container">
                 <div id="rounds_text" class="game_info_text">
@@ -85,6 +88,8 @@
                 <p id="screen_text_p"></p>
             </div>
         </div>
+
+        <div id="upgrade_container" class="upgrade_container">
     </div>
 </body>
 </html>
