audio mechanics + naming bugs fixed

--- a/html/play_cards.html
+++ b/html/play_cards.html
@@ -11,6 +11,8 @@
 
 
     <!-- all js stuff -->
+    <script src="../js/general/music_controller.js" defer></script>
+    
     <script src="../js/game state/total_value.js" defer></script>
     <script src="../js/game state/calculate_score.js" defer></script>
     <script src="../js/game state/upgrades.js" defer></script>
