bug fixes + W.I.P discards text

--- a/html/play_cards.html
+++ b/html/play_cards.html
@@ -75,9 +75,14 @@
                     <p id="current_score_text">0</p>
                 </div>
             </div>
-            <div id="total_hands_container" class="game_info_text_container">
+            <div id="total_hands_and_discards_container" class="game_info_text_container">
                 <div id="total_hands_p" class="game_info_p">hands:</div>
                 <div id="total_hands_text" class="game_info_text">3</div>
+
+                <div id="total_discards_container" class="game_info_text_container">
+                    <div id="total_discards_p" class="game_info_p">discards:</div>
+                    <div id="total_discards_text" class="game_info_text">3</div>
+                </div>
             </div>   
         </div>
     
