discards working + blackjack bonus visuals begining

--- a/html/play_cards.html
+++ b/html/play_cards.html
@@ -81,7 +81,9 @@
 
                 <div id="total_discards_container" class="game_info_text_container">
                     <div id="total_discards_p" class="game_info_p">discards:</div>
-                    <div id="total_discards_text" class="game_info_text">3</div>
+                    <div id="total_discards_text" class="game_info_text">4</div>
+                    <div id="blackjack_bonus_p" class="game_info_p">blackjack bonus:</div>
+                    <div id="blackjack_bonus_text" class="game_info_text">×1.5</div>
                 </div>
             </div>   
         </div>
