amount of cards left text + bug fixing + newest special card working

--- a/html/play_cards.html
+++ b/html/play_cards.html
@@ -46,8 +46,12 @@
         <!-- playing cards -->
         <div id="deck_cards" class="deck_cards"></div>
         <!-- no id so you can't move it -->
-        <div class="deck_cards"></div> 
-
+        <div class="deck_cards"></div>
+        
+        <!-- amount of cards left text -->
+        <div id="deck_cards_box" class="cards_left_text">
+            <p id="cards_left_p">52/52</p>
+        </div>
 
         <!-- use cards box -->
         <div id="use_cardsContainer" class="played_card_container">
