volume setting + changes + some art

--- a/html/settings.html
+++ b/html/settings.html
@@ -26,6 +26,11 @@
             animation speed: 1×
         </div>
 
+        <!-- music -->
+        <div id="music_volume_button" class="start_page_text_button" onclick="music_volume_change()">
+            volume: 100%
+        </div>
+
         <!-- color -->
         <div id="color_change_button" class="start_page_setting_button">
             background color:
