start tutorial if never done before + tutorial go to in rules

--- a/html/rules.html
+++ b/html/rules.html
@@ -33,6 +33,10 @@
             ui elements
         </div>
 
+        <div id="tutorial_button" class="start_page_text_button" onclick="go_to_link('tutorial')">
+            tutorial
+        </div>
+
         <!-- back -->
         <div id="back_button" class="start_page_text_button" onclick="go_to_link('start')">
             back
