bug fixing + removed unnecesairy code

--- a/html/tutorial.html
+++ b/html/tutorial.html
@@ -21,7 +21,7 @@
     <script src="../js/tutorial/cards/play_card.js" defer></script>
     <script src="../js/tutorial/cards/grab_card.js" defer></script>
     <script src="../js/tutorial/cards/use_card.js" defer></script>
-    <script src="../js/tutorial/cards/card_hover.js" defer></script>
+    <script src="../js/cards/card_hover.js" defer></script>
 
     <!-- deze als laatste zodat de functions eerst allemaal defined worden -->
     <script src="../js/tutorial/game state/order.js" defer></script>
