seeding working + sound change button working (again)

--- a/html/play_cards.html
+++ b/html/play_cards.html
@@ -21,6 +21,7 @@
     <script src="../js/cards/grab_card.js" defer></script>
     <script src="../js/cards/use_card.js" defer></script>
     <script src="../js/cards/card_hover.js" defer></script>
+    <script src="../js/general/seeding_random.js"></script>
 
     <!-- deze als laatste zodat de functions eerst allemaal defined worden -->
     <script src="../js/game state/order.js" defer></script>
