--- a/html/settings.html
+++ b/html/settings.html
@@ -20,7 +20,7 @@
 
 <body>
     <!-- all text buttons -->
-    <div class="start_page_text_button_container">
+    <div class="setting_page_text_button_container">
         <!-- animation speed -->
         <div id="animation_speed_button" class="start_page_text_button" onclick="animation_speed_change()">
             animation speed: 1×
@@ -35,6 +35,11 @@
         <div id="color_change_button" class="start_page_setting_button">
             background color:
             <input type="color" id="background_color_setting" value="#357D35">
+        </div>
+
+        <div id="seed_change_button" class="start_page_setting_button">
+            seed:
+            <input type="number" id="seed_setting" value=null>
         </div>
 
         <!-- back -->
