zote music setting

--- a/html/settings.html
+++ b/html/settings.html
@@ -31,6 +31,10 @@
             volume: 100%
         </div>
 
+        <div id="peak_music_button" class="start_page_text_button" onclick="peak_music_change()">
+            zote music: on
+        </div>
+
         <!-- color -->
         <div id="color_change_button" class="start_page_setting_button">
             background color:
